--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,5 +1,8 @@
 @import "../css/globalStyles.css";
 
+/* *{
+  outline: 2px solid white;
+} */
 .main-container {
   background-color: var(--background);
 }
@@ -1071,7 +1074,7 @@ infograph:nth-child(34) {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 350px;
+    height: 400px;
     justify-content: space-between;
     margin: 20px 0;
     padding: 20px;
@@ -1079,24 +1082,25 @@ infograph:nth-child(34) {
 
   .feature-item-left {
     width: 100%;
-    height: 250px;
+    height: 300px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    padding: 0 10px;
+    padding: 8px 10px;
     border-radius: 5px;
     padding-right: 0;
     overflow: hidden;
+    justify-content: flex-start;
   }
 
   .feature-item-right {
-    width: 100%;
+    width: 90%;
     height: 100px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    padding: 0 10px;
+    justify-content: flex-start;
+    padding: -1px 10px;
     margin-top: 20px;
+    align-items: center;
   }
   .feature-item-right .h0 {
     width: 20%;
